feat(ui): complete canonical dark chat fidelity
Complete canonical Dark Chat fidelity, functional model selection, intent routing, and Swing regression coverage.